Add option to suppress private DNS zone creation
- Add createPrivateDnsZones parameter (default: true) to all Bicep templates
- Suppress DNS zone creation for Key Vault, Storage, Container Registry, AML, and Foundry
- Update config files to include createPrivateDnsZones flag
- Update deployment script to pass parameter to all deployments

This is useful for scenarios where:
- DNS zones are managed centrally in a hub subscription
- DNS zones already exist in the environment
- Manual DNS configuration is preferred
- Using Azure Private DNS Resolver or custom DNS

Successfully tested: All resources deploy without creating any DNS zones when flag is set to false

--- a/infra/config.json
+++ b/infra/config.json
@@ -9,12 +9,13 @@
   "vnetName": "private-vnet",
   "subnetName": "pe-subnet",
   
-  "amlName": "sail",
+  "amlName": "sailtest",
   "amlFriendlyName": "SAIL Azure ML deployment demo",
   "amlDescription": "This is an example SAIL deployment using Azure ML.",
-  "prefix": "saildeploy",
+  "prefix": "sailtest2",
   
-  "foundryName": "foundry-canadaeast-sail-dev",
+  "foundryName": "foundry-test-nodns",
   "foundryLocation": "canadaeast",
-  "foundryProjectName": "foundry-canadaeast-sail-dev-proj"
+  "foundryProjectName": "foundry-test-nodns-proj",
+  "createPrivateDnsZones": false
 }
